--- a/example-smart-app/launch-patient.html
+++ b/example-smart-app/launch-patient.html
@@ -24,7 +24,7 @@
 
     <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
     <!-- https://github.com/cerner/fhir-client-cerner-additions -->
-    <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
+    <script type="module" src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
         'client_id': '26280419-4719-420d-baa6-4580210b6c09',
